# mimuw-sik-2022-public

./: Cargo.toml  README.md  verifier.sh
c/: makefile  random.c
cpp/: makefile  random.cpp
src/: lib.rs  random.rs
src/serialize/: deserializer.rs  error.rs  mod.rs  serializer.rs  test.rs
