[package]
name = "robots"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.7", features = ["dynamic"] }
bevy_prototype_lyon = "0.5"
clap = { version = "3", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-tree = "0.2"
lazy_static = "1"
serde = "1"
serde_json = "1"
byteorder = "1"
thiserror = "1"
itertools = "0.10"
rand = "0.8"
crossbeam-channel = "0.5"
